...
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/default_image" />

                        <TextView
                            android:id="@+id/album_name_middle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="album Name"
                            android:textColor="@android:color/background_light"
...
