...
            android:layout_height="wrap_content"
            android:textColor="@color/TextColor"
            android:textSize="24dp"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleSearchSeeAllAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
...
