...
                        <LinearLayout
                            android:id="@+id/fragment_track_layout5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/track_image_track_fragment"
                                android:layout_width="250dp"
                                android:layout_height="250dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="8dp"
                                android:scaleType="centerCrop"
                                android:src = "@drawable/default_image"
                                android:layout_marginBottom="20dp"/>
                            <TextView
                                android:id="@+id/track_name_middle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="32sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/background_light"
...
