...
                android:id="@+id/l1"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleSearchSeeAllPlaylist"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
...
